Fix layout issues on smaller viewports

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -14,6 +14,10 @@ $transition-length: .25s;
 
 // General
 
+* {
+  box-sizing: border-box;
+}
+
 body {
   background-color: $background-color;
   color: $text-color;
